--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editTextPhoneNumber"
             android:hint="@string/enter_the_phonenumber"
-            android:inputType="phone"
+            android:inputType="number"
             android:digits="0123456789"/>
 
 
