--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnAddContact"
-            android:text="@string/add_contact"/>
+            android:text="@string/add_contact"
+            android:background="@color/colorAccent"/>
 
         <TextView
             android:layout_width="match_parent"
