--- a/app/src/main/res/layout/activity_phone_book.xml
+++ b/app/src/main/res/layout/activity_phone_book.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PhoneBookActivity">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,23 +19,38 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
-        <TextView
-            android:id="@+id/count"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:text="count"
-            android:textAlignment="textEnd"
-            android:textSize="24sp"
+
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="218dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:text="Number Of Contacts :"
+                android:textAlignment="textEnd"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+            android:id="@+id/countnote"
+            android:layout_width="218dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
+            android:text="count"
+            android:textAlignment="textStart"
+            android:textSize="24sp"
             android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 
     <ListView
-        android:layout_marginTop="90dp"
         android:id="@+id/lvContacts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="630dp"
+        android:layout_marginTop="90dp" />
 
 </RelativeLayout>
