--- a/app/src/main/res/layout/activity_phone_book.xml
+++ b/app/src/main/res/layout/activity_phone_book.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
     <TextView
         android:id="@+id/listpfphonebooknoneed"
         android:layout_width="match_parent"
@@ -22,7 +21,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="horizontal">
 
             <TextView
@@ -44,6 +42,16 @@
             android:textSize="24sp"
             android:textStyle="bold" />
         </LinearLayout>
+        <EditText
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search Person"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/colorPrimary"
+            android:id="@+id/editSearch"
+            ></EditText>
     </LinearLayout>
 
 
@@ -51,6 +59,8 @@
         android:id="@+id/lvContacts"
         android:layout_width="match_parent"
         android:layout_height="630dp"
-        android:layout_marginTop="90dp" />
+        android:layout_marginTop="150dp"
+
+        />
 
 </RelativeLayout>
